Revises option framework
Improves support of enum options